--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gitnew</title>
     <style>
-        *{margin-right: auto;}
+        *{margin-right: 10;}
     </style>
 </head>
 <body>
